# kotofetch

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEV_NOTE.md  README.md  default.nix  release.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
quotes/: anime.toml  haiku.toml  lyrics.toml  proverb.toml  yojijukugo.toml
src/: anki.rs  cli.rs  config.rs  display.rs  main.rs  quotes.rs
