[package]
name = "kotofetch"
version = "0.2.21"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = { version = "4.6.3" }
console = "0.16.1"
ctrlc = "3.5.0"
dirs = "6.0.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
term_size = "0.3.2"
textwrap = "0.16.2"
toml = "0.9.5"
unicode-width = "0.2.1"
ureq = { version = "3.3.0", default-features = false, features = ["json"] }
serde_json = "1"
